# airbyte-commcare

airbyte-cdk/python/airbyte_cdk/: main.py
airbyte-integrations/connectors/source-avni/source_avni/: components.py
airbyte-integrations/connectors/source-avni/unit_tests/: test_components.py
airbyte-integrations/connectors/source-commcare/: README.md  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-commcare/source_commcare/: source.py  spec.yaml
airbyte-integrations/connectors/source-commcare/unit_tests/: test_source.py
airbyte-integrations/connectors/source-glific/: README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-glific/integration_tests/: sample_config.json
airbyte-integrations/connectors/source-glific/source_glific/: __init__.py  run.py  source.py
airbyte-integrations/connectors/source-glific/unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
airbyte-integrations/connectors/source-kobotoolbox/: Dockerfile
airbyte-integrations/connectors/source-kobotoolbox/source_kobotoolbox/: source.py  spec.yaml
airbyte-integrations/connectors/source-mgramseva/: README.md  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-surveycto/: README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-vowel-lms/: README.md  acceptance-test-config.yml  main.py  metadata.yaml  setup.py
docs/integrations/sources/: surveycto.md
(+27 files in other folders)
